--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 5022",
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json"
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "cloudinary": "^1.37.0",
+    "pocketbase": "^0.15.1",
     "sass": "^1.62.1",
     "scss": "^0.2.4",
     "svelte-spa-router": "^3.3.0"
